--- a/home_page/_layouts/default.html
+++ b/home_page/_layouts/default.html
@@ -40,7 +40,7 @@
 
     <footer class="site-footer">
       {% if site.github.is_project_page %}
-      <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ A journey to the world of Numbers }}</a>
+      <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{A journey to the world of Numbers}</a>
 	is maintained by Riccardo Brasca and Shanwen Wang. Visit the GitHub repository for more information.</span>
       {% endif %}
     </footer>
